apps/base/dev-argo-tasks/deploy/events/webhook-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-webhook
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      controller: eventsource-controller
      eventsource-name: webhook
  ingress:
    # Allow from gitea
    - ports:
        - port: 12000
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev-gitea
          podSelector:
            matchLabels:
              app.kubernetes.io/name: gitea
              app.kubernetes.io/component: gitea
